--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,7 +1,8 @@
 <div class="row">
-<div *ngFor="let item of movies.results" class="col-12 col-md-3 mt-5">
-    <div class="shadow-card p-0 m-0 card-content mx-auto">   
-        <img src="https://image.tmdb.org/t/p/w500/{{ item.poster_path }}"  width="304" height="450"  alt="">
+<div *ngFor="let item of movies.results" class="col-12 col-md-3 mt-5" (click)="openModalWithComponent(item)">
+    <div class="shadow-card p-0 m-0 card-content mx-auto card-hover">   
+        <img *ngIf="item.poster_path" src="https://image.tmdb.org/t/p/w500/{{ item.poster_path }}"  width="304" height="450"  alt="">
+        <img *ngIf="!item.poster_path" src="../../../assets/red-coming-soon.jpg"  width="304" height="450"  alt="">
         <div class="d-flex justify-content-between mt-2 align-items-center">
             <div class="px-1 ml-4">
             <h5 class="d-inline-block text-truncate" style="max-width: 180px;">{{ item.title }}</h5>
@@ -9,6 +10,6 @@
             </div>
             <div class="box rating d-flex justify-content-center align-items-center mr-4"><span>{{ item.vote_average }}</span></div>
         </div>
-    </div >
+    </div>
 </div>
 </div>
