--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -1,11 +1,3 @@
-.rating {
-   border: 1.5px solid;
-   border-color:#FF0079; 
-   color: #FF0079;
-   width: 3rem;
-   height: 2rem;
-}
-
 .shadow-card {
     box-shadow: 0px 4px 17px -4px rgba(0,0,0,0.75);
 }
@@ -13,3 +5,15 @@
 .card-content {
     width: 304px;
 }
+
+
+.card-hover {
+    transition: all .2s ease-in-out;
+}
+
+.card-hover:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+
