--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,15 @@
-<p>footer works!</p>
+<div class="container bg-white mt-5 footer-height">
+    <div class="row">
+    <div class="offset-0 offset-md-1 col-12 col-md-4 text-center text-md-left">
+        <div class="navbar-brand slogan-footer">THEMOVIE<span class="font-weight-bold box">BOX</span></div> <br>
+        <span class="text-muted">Designed by Milan Houter.</span>
+    </div>
+    <div class="offest-0 offset-md-2 col-12 col-md-5">
+        <div class="d-flex justify-content-center mt-4">
+            <a class="mx-4 link-footer" routerLink="/">Treding</a>
+            <a href="" class="mx-4 link-footer" routerLink="/top-rated">Top Rated</a>
+            <a href="" class="mx-4 link-footer">About</a>
+        </div>
+    </div>
+</div>
+</div>
