--- a/src/app/views/per-genre/per-genre.component.html
+++ b/src/app/views/per-genre/per-genre.component.html
@@ -1,4 +1,4 @@
-<section class="container mt-1">
+<section class="container mt-1 bg-gray">
     <div class="row p-0">
     <div class="col-12" *ngIf="movies">
     <app-movie-card [movies]="movies"></app-movie-card>
