--- a/src/app/components/movie-details/movie-details.component.html
+++ b/src/app/components/movie-details/movie-details.component.html
@@ -41,9 +41,14 @@
         <div class="col-12 col-md-8">
             <p class="movie-title ml-0 ml-md-4">{{ list[0] }}</p>
              <p #para class="mt-4 movie-overview ml-0 ml-md-4">{{ list[2] }}</p>
-             <button (click)="changeFont('-')" class="btn btn-fs ml-4 font-weight-bold shadow-none" title="Diminuir a fonte">-</button>
-             <button (click)="changeFont('+')" class="btn btn-fs ml-3 font-weight-bold shadow-none" title="Aumentar a fonte">+</button>
-             <div class="mt-3 mt-md-5 rating d-flex justify-content-center align-items-center ml-custom" style="font-size: 2rem; width: 4rem; height: 3rem;"><span>{{ list[1] }}</span></div>
+             <div class="d-flex flex-row flex-md-column">
+               <div>
+             <button (click)="changeFont('-')" class="btn btn-fs ml-4 font-weight-bold shadow-none" title="Increase font">-</button>
+             <button (click)="changeFont('+')" class="btn btn-fs ml-3 font-weight-bold shadow-none" title="Decrease font">+</button>
+            </div>
+              <div title="Vote Average" class="mt-3 mt-md-5 rating d-flex justify-content-center align-items-center ml-custom" style="font-size: 2rem; width: 4rem; height: 3rem;"><span>{{ list[1] }}</span></div>
+             
+            </div>
         </div>
     </div>
     </div>
