--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,3 +54,8 @@
     width: 3rem;
     height: 2rem;
  }
+
+ .bg-gray {
+    background-color: rgb(247, 247, 247);
+    padding-bottom: 5rem !important;
+}
