--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -6,7 +6,7 @@
         <div class="d-flex justify-content-between mt-2 align-items-center">
             <div class="px-1 ml-4">
             <h5 class="d-inline-block text-truncate" style="max-width: 180px;">{{ item.title }}</h5>
-            <p class="text-muted">Action, Adventure, Fantasy</p>
+            <p class="text-muted">{{ arrayForString(item.genre_ids) }}</p>
             </div>
             <div class="box rating d-flex justify-content-center align-items-center mr-4"><span>{{ item.vote_average }}</span></div>
         </div>
